--- a/TIMDESKTOPUSERINTERFACE/Views/ShellView.xaml
+++ b/TIMDESKTOPUSERINTERFACE/Views/ShellView.xaml
@@ -5,8 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TIMDESKTOPUSERINTERFACE.Views"
         mc:Ignorable="d"
-        Title="ShellView" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="ShellView" Height="450" Width="800" >
+    <DockPanel>
+        <Menu DockPanel.Dock="Top"  Background="AliceBlue"  FontSize="18">
+            <MenuItem Header="_File" >
+                
+            </MenuItem>
+            <MenuItem Header="_Account">
+                <MenuItem x:Name="LoginScreen" Header="_Login" FontSize="14"  >
+                </MenuItem>
+                <MenuItem Header ="Setting" FontSize="14">
+                    
+                </MenuItem>
+                
+            </MenuItem>
+        </Menu>
+        <Grid>
+            <ContentControl x:Name="ActiveItem" Margin="5" >
+                
+            </ContentControl>
+        </Grid>
+    </DockPanel>
 </Window>
