First Add  Error Massge LoginViewModel cs and Xmal  code and Textblock Two  Add SQL Table (Product User SaleDetial Sale Inentery )

--- a/TIMDESKTOPUSERINTERFACE/App.xaml
+++ b/TIMDESKTOPUSERINTERFACE/App.xaml
@@ -11,6 +11,7 @@
                     <local:Boostrapper x:Key="Boostrapper"/>
                 </ResourceDictionary>
         </ResourceDictionary.MergedDictionaries>
+    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"></BooleanToVisibilityConverter>
     </ResourceDictionary>
         
     </Application.Resources>
