--- a/TIMDESKTOPUSERINTERFACE/Views/LoginView.xaml
+++ b/TIMDESKTOPUSERINTERFACE/Views/LoginView.xaml
@@ -18,6 +18,7 @@
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             
              
@@ -25,17 +26,27 @@
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" HorizontalAlignment="Center"
                    FontSize="64"  Margin="0 0 0 10" >Login Form</TextBlock>
-        <!--username row-->
-        <TextBlock Grid.Row="1"  Grid.Column="1"  FontSize="18" FontWeight="Bold"  >Username</TextBlock>
 
-        <TextBox x:Name="UserName" Grid.Column="2" Grid.Row="1" Margin="0 0 0 10" ></TextBox>
+        <!--username row-->
+        <TextBlock Grid.Row="2"  Grid.Column="1"  FontSize="18" FontWeight="Bold"  >Username</TextBlock>
+        <TextBox x:Name="UserName" Grid.Column="2" Grid.Row="2" Margin="0 0 5 20"  MinWidth="321"></TextBox>
+
+        <!--ERORR Messge-->
+        <TextBlock x:Name="ErrorMessge" 
+                   Grid.Row="1" Grid.Column="1" Margin="0 0 0 20" Foreground="Red"
+                   MaxWidth="435" TextWrapping="Wrap" Grid.ColumnSpan="2"
+                   Visibility="{Binding IsErrorVisible,Converter={StaticResource BooleanToVisibilityConverter},FallbackValue=Collapsed}">
+            
+        </TextBlock>
+
+       
         <!--password row-->
-        <TextBlock Grid.Row="2" Grid.Column="1" FontWeight="Bold" >Password:</TextBlock>
+        <TextBlock Grid.Row="3" Grid.Column="1" FontWeight="Bold"  Margin="0 0 5 20">Password:</TextBlock>
          
-        <PasswordBox x:Name="Password" Grid.Row="2" Grid.Column="2"
-                     MinWidth="150" Margin="0 0 0 10"></PasswordBox>
+        <PasswordBox x:Name="Password" Grid.Row="3" Grid.Column="2"
+                     MinWidth="321" Margin="0 0 5 20"></PasswordBox>
         <!--login row-->
-        <Button x:Name="LogIn" Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" HorizontalAlignment="Center"
+        <Button x:Name="LogIn" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="2" HorizontalAlignment="Center"
                 Padding="20 5" >Log In</Button>
     </Grid>
 </UserControl>
